<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="150dp">

    <EditText
        android:id="@+id/oldPasswordInput"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="111dp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/showHidePassword0"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:src="@drawable/ic_visibility_off"
        android:contentDescription="@string/show_hide_password"
        app:layout_constraintStart_toEndOf="@id/oldPasswordInput"
        app:layout_constraintTop_toTopOf="@id/oldPasswordInput"
        app:layout_constraintBottom_toBottomOf="@id/oldPasswordInput"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/passwordInput1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="111dp"
        android:hint="@string/passwordInput"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordInput" />

    <ImageView
        android:id="@+id/showHidePassword1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:src="@drawable/ic_visibility_off"
        android:contentDescription="@string/show_hide_password"
        app:layout_constraintStart_toEndOf="@id/passwordInput1"
        app:layout_constraintTop_toTopOf="@id/passwordInput1"
        app:layout_constraintBottom_toBottomOf="@id/passwordInput1"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/passwordInput2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="111dp"
        android:hint="@string/update_password_second"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput1" />

    <ImageView
        android:id="@+id/showHidePassword2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:src="@drawable/ic_visibility_off"
        android:contentDescription="@string/show_hide_password"
        app:layout_constraintStart_toEndOf="@id/passwordInput2"
        app:layout_constraintTop_toTopOf="@id/passwordInput2"
        app:layout_constraintBottom_toBottomOf="@id/passwordInput2"
        android:padding="10dp"/>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="120dp"
        android:text="@string/update_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput2" />

</androidx.constraintlayout.widget.ConstraintLayout>
